parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> statement programa
Rule 2     programa -> statement
Rule 3     statement -> declaracao_de_funcao
Rule 4     statement -> declara_var
Rule 5     declaracao_de_funcao -> tipo IDENTIFICADOR ABREPAR declaracao_param FECHAPAR sequencia_de_declaracao FIM
Rule 6     declaracao_de_funcao -> tipo IDENTIFICADOR ABREPAR declaracao_param FECHAPAR FIM
Rule 7     declaracao_de_funcao -> tipo IDENTIFICADOR ABREPAR FECHAPAR FIM
Rule 8     declaracao_de_funcao -> tipo IDENTIFICADOR ABREPAR FECHAPAR sequencia_de_declaracao FIM
Rule 9     declaracao_param -> tipo DOISPONTOS IDENTIFICADOR VIRGULA declaracao_param
Rule 10    declaracao_param -> tipo DOISPONTOS IDENTIFICADOR
Rule 11    sequencia_de_declaracao -> declaracao
Rule 12    sequencia_de_declaracao -> declaracao sequencia_de_declaracao
Rule 13    declaracao -> expressao_condicional
Rule 14    declaracao -> expressao_iteracao
Rule 15    declaracao -> expressao_atribuicao
Rule 16    declaracao -> expressao_leitura
Rule 17    declaracao -> expressao_escreva
Rule 18    declaracao -> declara_var
Rule 19    declaracao -> retorna
Rule 20    declaracao -> chamada_de_funcao
Rule 21    expressao_condicional -> SE expressao ENTAO sequencia_de_declaracao SENAO sequencia_de_declaracao FIM
Rule 22    expressao_condicional -> SE expressao ENTAO sequencia_de_declaracao FIM
Rule 23    expressao_iteracao -> REPITA sequencia_de_declaracao ATE expressao
Rule 24    expressao_atribuicao -> IDENTIFICADOR ATRIBUICAO expressao
Rule 25    expressao_leitura -> LEIA ABREPAR IDENTIFICADOR FECHAPAR
Rule 26    expressao_escreva -> ESCREVE ABREPAR expressao FECHAPAR
Rule 27    declara_var -> tipo DOISPONTOS IDENTIFICADOR VIRGULA declara_outra_var
Rule 28    declara_var -> tipo DOISPONTOS IDENTIFICADOR
Rule 29    declara_outra_var -> IDENTIFICADOR VIRGULA declara_outra_var
Rule 30    declara_outra_var -> IDENTIFICADOR
Rule 31    retorna -> RETORNA ABREPAR expressao FECHAPAR
Rule 32    chamada_de_funcao -> IDENTIFICADOR ABREPAR param_chama_funcao FECHAPAR
Rule 33    param_chama_funcao -> expressao VIRGULA param_chama_funcao
Rule 34    param_chama_funcao -> expressao
Rule 35    expressao -> expressao_simples
Rule 36    expressao -> expressao_simples comparacao_operador expressao_simples
Rule 37    comparacao_operador -> MAIOR
Rule 38    comparacao_operador -> MAIORIGUAL
Rule 39    comparacao_operador -> MENOR
Rule 40    comparacao_operador -> MENORIGUAL
Rule 41    comparacao_operador -> IGUALDADE
Rule 42    expressao_simples -> expressao_simples soma termo
Rule 43    expressao_simples -> termo
Rule 44    soma -> ADICAO
Rule 45    soma -> SUBTRACAO
Rule 46    mult -> MULTIPLICACAO
Rule 47    mult -> DIVISAO
Rule 48    termo -> fator
Rule 49    termo -> termo mult fator
Rule 50    fator -> ABREPAR expressao FECHAPAR
Rule 51    fator -> chamada_de_funcao
Rule 52    fator -> expressao_numero
Rule 53    fator -> expressao_identificador
Rule 54    expressao_identificador -> IDENTIFICADOR
Rule 55    expressao_numero -> numero
Rule 56    expressao_numero -> ADICAO expressao_numero
Rule 57    expressao_numero -> SUBTRACAO expressao_numero
Rule 58    tipo -> INTEIRO
Rule 59    tipo -> FLUTUANTE
Rule 60    numero -> INTEIRO
Rule 61    numero -> FLUTUANTE

Terminals, with rules where they appear

ABREPAR              : 5 6 7 8 25 26 31 32 50
ADICAO               : 44 56
ATE                  : 23
ATRIBUICAO           : 24
DIVISAO              : 47
DOISPONTOS           : 9 10 27 28
ENTAO                : 21 22
ESCREVE              : 26
FECHAPAR             : 5 6 7 8 25 26 31 32 50
FIM                  : 5 6 7 8 21 22
FLUTUANTE            : 59 61
IDENTIFICADOR        : 5 6 7 8 9 10 24 25 27 28 29 30 32 54
IGUALDADE            : 41
INTEIRO              : 58 60
LEIA                 : 25
MAIOR                : 37
MAIORIGUAL           : 38
MENOR                : 39
MENORIGUAL           : 40
MULTIPLICACAO        : 46
REPITA               : 23
RETORNA              : 31
SE                   : 21 22
SENAO                : 21
SUBTRACAO            : 45 57
VIRGULA              : 9 27 29 33
error                : 

Nonterminals, with rules where they appear

chamada_de_funcao    : 20 51
comparacao_operador  : 36
declara_outra_var    : 27 29
declara_var          : 4 18
declaracao           : 11 12
declaracao_de_funcao : 3
declaracao_param     : 5 6 9
expressao            : 21 22 23 24 26 31 33 34 50
expressao_atribuicao : 15
expressao_condicional : 13
expressao_escreva    : 17
expressao_identificador : 53
expressao_iteracao   : 14
expressao_leitura    : 16
expressao_numero     : 52 56 57
expressao_simples    : 35 36 36 42
fator                : 48 49
mult                 : 49
numero               : 55
param_chama_funcao   : 32 33
programa             : 1 0
retorna              : 19
sequencia_de_declaracao : 5 8 12 21 21 22 23
soma                 : 42
statement            : 1 2
termo                : 42 43 49
tipo                 : 5 6 7 8 9 10 27 28

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . statement programa
    (2) programa -> . statement
    (3) statement -> . declaracao_de_funcao
    (4) statement -> . declara_var
    (5) declaracao_de_funcao -> . tipo IDENTIFICADOR ABREPAR declaracao_param FECHAPAR sequencia_de_declaracao FIM
    (6) declaracao_de_funcao -> . tipo IDENTIFICADOR ABREPAR declaracao_param FECHAPAR FIM
    (7) declaracao_de_funcao -> . tipo IDENTIFICADOR ABREPAR FECHAPAR FIM
    (8) declaracao_de_funcao -> . tipo IDENTIFICADOR ABREPAR FECHAPAR sequencia_de_declaracao FIM
    (27) declara_var -> . tipo DOISPONTOS IDENTIFICADOR VIRGULA declara_outra_var
    (28) declara_var -> . tipo DOISPONTOS IDENTIFICADOR
    (58) tipo -> . INTEIRO
    (59) tipo -> . FLUTUANTE

    INTEIRO         shift and go to state 2
    FLUTUANTE       shift and go to state 5

    programa                       shift and go to state 1
    tipo                           shift and go to state 3
    declaracao_de_funcao           shift and go to state 4
    declara_var                    shift and go to state 6
    statement                      shift and go to state 7

state 1

    (0) S' -> programa .



state 2

    (58) tipo -> INTEIRO .

    DOISPONTOS      reduce using rule 58 (tipo -> INTEIRO .)
    IDENTIFICADOR   reduce using rule 58 (tipo -> INTEIRO .)


state 3

    (5) declaracao_de_funcao -> tipo . IDENTIFICADOR ABREPAR declaracao_param FECHAPAR sequencia_de_declaracao FIM
    (6) declaracao_de_funcao -> tipo . IDENTIFICADOR ABREPAR declaracao_param FECHAPAR FIM
    (7) declaracao_de_funcao -> tipo . IDENTIFICADOR ABREPAR FECHAPAR FIM
    (8) declaracao_de_funcao -> tipo . IDENTIFICADOR ABREPAR FECHAPAR sequencia_de_declaracao FIM
    (27) declara_var -> tipo . DOISPONTOS IDENTIFICADOR VIRGULA declara_outra_var
    (28) declara_var -> tipo . DOISPONTOS IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 9
    DOISPONTOS      shift and go to state 8


state 4

    (3) statement -> declaracao_de_funcao .

    INTEIRO         reduce using rule 3 (statement -> declaracao_de_funcao .)
    FLUTUANTE       reduce using rule 3 (statement -> declaracao_de_funcao .)
    $end            reduce using rule 3 (statement -> declaracao_de_funcao .)


state 5

    (59) tipo -> FLUTUANTE .

    DOISPONTOS      reduce using rule 59 (tipo -> FLUTUANTE .)
    IDENTIFICADOR   reduce using rule 59 (tipo -> FLUTUANTE .)


state 6

    (4) statement -> declara_var .

    INTEIRO         reduce using rule 4 (statement -> declara_var .)
    FLUTUANTE       reduce using rule 4 (statement -> declara_var .)
    $end            reduce using rule 4 (statement -> declara_var .)


state 7

    (1) programa -> statement . programa
    (2) programa -> statement .
    (1) programa -> . statement programa
    (2) programa -> . statement
    (3) statement -> . declaracao_de_funcao
    (4) statement -> . declara_var
    (5) declaracao_de_funcao -> . tipo IDENTIFICADOR ABREPAR declaracao_param FECHAPAR sequencia_de_declaracao FIM
    (6) declaracao_de_funcao -> . tipo IDENTIFICADOR ABREPAR declaracao_param FECHAPAR FIM
    (7) declaracao_de_funcao -> . tipo IDENTIFICADOR ABREPAR FECHAPAR FIM
    (8) declaracao_de_funcao -> . tipo IDENTIFICADOR ABREPAR FECHAPAR sequencia_de_declaracao FIM
    (27) declara_var -> . tipo DOISPONTOS IDENTIFICADOR VIRGULA declara_outra_var
    (28) declara_var -> . tipo DOISPONTOS IDENTIFICADOR
    (58) tipo -> . INTEIRO
    (59) tipo -> . FLUTUANTE

    $end            reduce using rule 2 (programa -> statement .)
    INTEIRO         shift and go to state 2
    FLUTUANTE       shift and go to state 5

    programa                       shift and go to state 10
    tipo                           shift and go to state 3
    declaracao_de_funcao           shift and go to state 4
    declara_var                    shift and go to state 6
    statement                      shift and go to state 7

state 8

    (27) declara_var -> tipo DOISPONTOS . IDENTIFICADOR VIRGULA declara_outra_var
    (28) declara_var -> tipo DOISPONTOS . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 11


state 9

    (5) declaracao_de_funcao -> tipo IDENTIFICADOR . ABREPAR declaracao_param FECHAPAR sequencia_de_declaracao FIM
    (6) declaracao_de_funcao -> tipo IDENTIFICADOR . ABREPAR declaracao_param FECHAPAR FIM
    (7) declaracao_de_funcao -> tipo IDENTIFICADOR . ABREPAR FECHAPAR FIM
    (8) declaracao_de_funcao -> tipo IDENTIFICADOR . ABREPAR FECHAPAR sequencia_de_declaracao FIM

    ABREPAR         shift and go to state 12


state 10

    (1) programa -> statement programa .

    $end            reduce using rule 1 (programa -> statement programa .)


state 11

    (27) declara_var -> tipo DOISPONTOS IDENTIFICADOR . VIRGULA declara_outra_var
    (28) declara_var -> tipo DOISPONTOS IDENTIFICADOR .

    VIRGULA         shift and go to state 13
    SE              reduce using rule 28 (declara_var -> tipo DOISPONTOS IDENTIFICADOR .)
    REPITA          reduce using rule 28 (declara_var -> tipo DOISPONTOS IDENTIFICADOR .)
    IDENTIFICADOR   reduce using rule 28 (declara_var -> tipo DOISPONTOS IDENTIFICADOR .)
    LEIA            reduce using rule 28 (declara_var -> tipo DOISPONTOS IDENTIFICADOR .)
    ESCREVE         reduce using rule 28 (declara_var -> tipo DOISPONTOS IDENTIFICADOR .)
    RETORNA         reduce using rule 28 (declara_var -> tipo DOISPONTOS IDENTIFICADOR .)
    INTEIRO         reduce using rule 28 (declara_var -> tipo DOISPONTOS IDENTIFICADOR .)
    FLUTUANTE       reduce using rule 28 (declara_var -> tipo DOISPONTOS IDENTIFICADOR .)
    FIM             reduce using rule 28 (declara_var -> tipo DOISPONTOS IDENTIFICADOR .)
    ATE             reduce using rule 28 (declara_var -> tipo DOISPONTOS IDENTIFICADOR .)
    SENAO           reduce using rule 28 (declara_var -> tipo DOISPONTOS IDENTIFICADOR .)
    $end            reduce using rule 28 (declara_var -> tipo DOISPONTOS IDENTIFICADOR .)


state 12

    (5) declaracao_de_funcao -> tipo IDENTIFICADOR ABREPAR . declaracao_param FECHAPAR sequencia_de_declaracao FIM
    (6) declaracao_de_funcao -> tipo IDENTIFICADOR ABREPAR . declaracao_param FECHAPAR FIM
    (7) declaracao_de_funcao -> tipo IDENTIFICADOR ABREPAR . FECHAPAR FIM
    (8) declaracao_de_funcao -> tipo IDENTIFICADOR ABREPAR . FECHAPAR sequencia_de_declaracao FIM
    (9) declaracao_param -> . tipo DOISPONTOS IDENTIFICADOR VIRGULA declaracao_param
    (10) declaracao_param -> . tipo DOISPONTOS IDENTIFICADOR
    (58) tipo -> . INTEIRO
    (59) tipo -> . FLUTUANTE

    FECHAPAR        shift and go to state 15
    INTEIRO         shift and go to state 2
    FLUTUANTE       shift and go to state 5

    tipo                           shift and go to state 14
    declaracao_param               shift and go to state 16

state 13

    (27) declara_var -> tipo DOISPONTOS IDENTIFICADOR VIRGULA . declara_outra_var
    (29) declara_outra_var -> . IDENTIFICADOR VIRGULA declara_outra_var
    (30) declara_outra_var -> . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 18

    declara_outra_var              shift and go to state 17

state 14

    (9) declaracao_param -> tipo . DOISPONTOS IDENTIFICADOR VIRGULA declaracao_param
    (10) declaracao_param -> tipo . DOISPONTOS IDENTIFICADOR

    DOISPONTOS      shift and go to state 19


state 15

    (7) declaracao_de_funcao -> tipo IDENTIFICADOR ABREPAR FECHAPAR . FIM
    (8) declaracao_de_funcao -> tipo IDENTIFICADOR ABREPAR FECHAPAR . sequencia_de_declaracao FIM
    (11) sequencia_de_declaracao -> . declaracao
    (12) sequencia_de_declaracao -> . declaracao sequencia_de_declaracao
    (13) declaracao -> . expressao_condicional
    (14) declaracao -> . expressao_iteracao
    (15) declaracao -> . expressao_atribuicao
    (16) declaracao -> . expressao_leitura
    (17) declaracao -> . expressao_escreva
    (18) declaracao -> . declara_var
    (19) declaracao -> . retorna
    (20) declaracao -> . chamada_de_funcao
    (21) expressao_condicional -> . SE expressao ENTAO sequencia_de_declaracao SENAO sequencia_de_declaracao FIM
    (22) expressao_condicional -> . SE expressao ENTAO sequencia_de_declaracao FIM
    (23) expressao_iteracao -> . REPITA sequencia_de_declaracao ATE expressao
    (24) expressao_atribuicao -> . IDENTIFICADOR ATRIBUICAO expressao
    (25) expressao_leitura -> . LEIA ABREPAR IDENTIFICADOR FECHAPAR
    (26) expressao_escreva -> . ESCREVE ABREPAR expressao FECHAPAR
    (27) declara_var -> . tipo DOISPONTOS IDENTIFICADOR VIRGULA declara_outra_var
    (28) declara_var -> . tipo DOISPONTOS IDENTIFICADOR
    (31) retorna -> . RETORNA ABREPAR expressao FECHAPAR
    (32) chamada_de_funcao -> . IDENTIFICADOR ABREPAR param_chama_funcao FECHAPAR
    (58) tipo -> . INTEIRO
    (59) tipo -> . FLUTUANTE

    FIM             shift and go to state 22
    SE              shift and go to state 20
    REPITA          shift and go to state 35
    IDENTIFICADOR   shift and go to state 29
    LEIA            shift and go to state 25
    ESCREVE         shift and go to state 24
    RETORNA         shift and go to state 26
    INTEIRO         shift and go to state 2
    FLUTUANTE       shift and go to state 5

    expressao_leitura              shift and go to state 27
    tipo                           shift and go to state 28
    expressao_iteracao             shift and go to state 30
    declara_var                    shift and go to state 33
    declaracao                     shift and go to state 31
    expressao_escreva              shift and go to state 32
    expressao_atribuicao           shift and go to state 21
    expressao_condicional          shift and go to state 23
    sequencia_de_declaracao        shift and go to state 34
    retorna                        shift and go to state 36
    chamada_de_funcao              shift and go to state 37

state 16

    (5) declaracao_de_funcao -> tipo IDENTIFICADOR ABREPAR declaracao_param . FECHAPAR sequencia_de_declaracao FIM
    (6) declaracao_de_funcao -> tipo IDENTIFICADOR ABREPAR declaracao_param . FECHAPAR FIM

    FECHAPAR        shift and go to state 38


state 17

    (27) declara_var -> tipo DOISPONTOS IDENTIFICADOR VIRGULA declara_outra_var .

    SE              reduce using rule 27 (declara_var -> tipo DOISPONTOS IDENTIFICADOR VIRGULA declara_outra_var .)
    REPITA          reduce using rule 27 (declara_var -> tipo DOISPONTOS IDENTIFICADOR VIRGULA declara_outra_var .)
    IDENTIFICADOR   reduce using rule 27 (declara_var -> tipo DOISPONTOS IDENTIFICADOR VIRGULA declara_outra_var .)
    LEIA            reduce using rule 27 (declara_var -> tipo DOISPONTOS IDENTIFICADOR VIRGULA declara_outra_var .)
    ESCREVE         reduce using rule 27 (declara_var -> tipo DOISPONTOS IDENTIFICADOR VIRGULA declara_outra_var .)
    RETORNA         reduce using rule 27 (declara_var -> tipo DOISPONTOS IDENTIFICADOR VIRGULA declara_outra_var .)
    INTEIRO         reduce using rule 27 (declara_var -> tipo DOISPONTOS IDENTIFICADOR VIRGULA declara_outra_var .)
    FLUTUANTE       reduce using rule 27 (declara_var -> tipo DOISPONTOS IDENTIFICADOR VIRGULA declara_outra_var .)
    FIM             reduce using rule 27 (declara_var -> tipo DOISPONTOS IDENTIFICADOR VIRGULA declara_outra_var .)
    ATE             reduce using rule 27 (declara_var -> tipo DOISPONTOS IDENTIFICADOR VIRGULA declara_outra_var .)
    SENAO           reduce using rule 27 (declara_var -> tipo DOISPONTOS IDENTIFICADOR VIRGULA declara_outra_var .)
    $end            reduce using rule 27 (declara_var -> tipo DOISPONTOS IDENTIFICADOR VIRGULA declara_outra_var .)


state 18

    (29) declara_outra_var -> IDENTIFICADOR . VIRGULA declara_outra_var
    (30) declara_outra_var -> IDENTIFICADOR .

    VIRGULA         shift and go to state 39
    INTEIRO         reduce using rule 30 (declara_outra_var -> IDENTIFICADOR .)
    FLUTUANTE       reduce using rule 30 (declara_outra_var -> IDENTIFICADOR .)
    $end            reduce using rule 30 (declara_outra_var -> IDENTIFICADOR .)
    SE              reduce using rule 30 (declara_outra_var -> IDENTIFICADOR .)
    REPITA          reduce using rule 30 (declara_outra_var -> IDENTIFICADOR .)
    IDENTIFICADOR   reduce using rule 30 (declara_outra_var -> IDENTIFICADOR .)
    LEIA            reduce using rule 30 (declara_outra_var -> IDENTIFICADOR .)
    ESCREVE         reduce using rule 30 (declara_outra_var -> IDENTIFICADOR .)
    RETORNA         reduce using rule 30 (declara_outra_var -> IDENTIFICADOR .)
    FIM             reduce using rule 30 (declara_outra_var -> IDENTIFICADOR .)
    ATE             reduce using rule 30 (declara_outra_var -> IDENTIFICADOR .)
    SENAO           reduce using rule 30 (declara_outra_var -> IDENTIFICADOR .)


state 19

    (9) declaracao_param -> tipo DOISPONTOS . IDENTIFICADOR VIRGULA declaracao_param
    (10) declaracao_param -> tipo DOISPONTOS . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 40


state 20
